Hero height fixed to not overflow

--- a/cozygames/styles/home-style.css
+++ b/cozygames/styles/home-style.css
@@ -147,13 +147,13 @@ svg {
 #hero {
   width: 100%;
   text-align: center;
-  max-height: 100vh;
+  height: 100vh;
 }
 
 #hero img {
   width: 100%;
   object-fit: cover;
-  max-height: 100vh;
+  height: 100vh;
   position: relative;
   z-index: -1;
 }
